ThrowAwayProjects/wwwroot/css/forum.css
.thread {
    margin-top: 10px;
    margin-bottom: 150px;
}

.post {
    padding-top: 19px;
    cursor: pointer;
}

.post~.post {
    border-top: 1px solid #5e5e5e;
}

.message-head {
    font-size: 24px;
    font-weight: bold;
    line-height: 2;
    display: block;
}

.message-body {
    font-size: 18px;
    text-align: justify;
}

.message-signature {
    font-size: 18px;
    font-style: italic;
    margin-top: 19px;
    margin-bottom: 19px;
    color: #999;
}

.time-stamp {
    font-size: 12px;
    color: #999;
    display: none;
    float: right;
}

.admin-color {
    color: #ff0;
}

.post:hover .time-stamp {
    display: inline-block;
}

.post:hover .message-signature {
    text-shadow: 1px 1px 10px #555;
}

.post:hover .message-body {
    text-shadow: 1px 1px 10px #555;
}

